
syntax = "proto3";

package app;

service AuthService {
  rpc UserAuth (stream Credentials) returns (stream SuccessMessage);
  rpc IsAuthUser (stream JWT) returns (SuccessMessage);
};
service DataBaseProvider {
  rpc CreateUser (stream Credentials) returns (SuccessMessage);
};
service ClientService {
  rpc TestRpc (Test) returns (Test);
};
message Test {
  string test = 1;
};
message JWT {
  string JWT = 1;
};
message Credentials {
  string username = 1;
  string password = 2;
};
message SuccessMessage {
  bool success = 1;
};